--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <!-- <link rel="manifest" href="<%= BASE_URL %>manifest.webmanifest"> -->
+    
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>njoy</title>
+
+    <title><%= htmlWebpackPlugin.options.title %></title>
+
   </head>
   <body>
     <noscript>
